--- a/shop.html
+++ b/shop.html
@@ -407,7 +407,7 @@
         <!-- products -->
         <div class="col-span-3">
             <!-- sorting -->
-            <div class="mb-4 flex items-center">
+            <div class="mb-4 sm:flex hidden items-center">
                 <button ="showFilter=!showFilter"
                     class="bg-primary border border-primary text-white px-10 py-3 font-medium rounded uppercase hover:bg-transparent hover:text-primary transition lg:hidden text-sm mr-3 focus:outline-none">
                     Filter
